[gd_scene load_steps=5 format=2]

[ext_resource path="res://Attacks/PunchHitbox.gd" type="Script" id=1]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkTimer.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76, 15.5 )

[node name="PunchHitbox" type="Node2D"]
script = ExtResource( 1 )

[node name="ActiveTimer" type="Node" parent="."]
script = ExtResource( 2 )
wait_ticks = 3

[node name="AttackVisualBox" type="Sprite" parent="."]
position = Vector2( 76.5, 0.5 )
scale = Vector2( 2.39062, 0.5 )
z_index = 1
texture = ExtResource( 3 )

[node name="HitboxArea" type="Area2D" parent="."]

[node name="HitboxCollision" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2( 76, 0.5 )
shape = SubResource( 1 )

[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
